--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "msw": "^2.2.14",
     "plop": "^4.0.1",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
+    "prettier": "3.3.1",
     "storybook": "^8.0.9",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
